--- a/nginx.conf
+++ b/nginx.conf
@@ -1,1 +1,21 @@
-~éer‰íz{l¡ùàŠ|r‰ß
+server {
+    listen 80;
+    server_name localhost;
+
+    root /usr/share/nginx/html;
+    index index.html;
+
+    types {
+        application/javascript js mjs tsx;
+        text/css css;
+        text/html html htm;
+        image/jpeg jpeg jpg;
+        image/png png;
+        image/gif gif;
+        application/json json;
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+}
