--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,8 @@
-full contents of docker-compose.yml
+version: '3.8'
+
+services:
+  webapp:
+    build: .
+    ports:
+      - "8080:80"
+    restart: unless-stopped
