--- a/nginx.conf
+++ b/nginx.conf
@@ -1,22 +1,1 @@
-server {
-    listen 80; # Luister op poort 80 binnen de container
-    server_name localhost; # Kan worden ingesteld op je domein, maar Coolify handelt dit af
-
-    root /usr/share/nginx/html; # De map waar je website bestanden staan
-    index index.html index.htm; # Standaard bestanden om te serveren
-
-    # Deze regel is cruciaal voor client-side applicaties (SPA's)
-    # Als een specifieke file niet gevonden wordt, valt het terug op index.html
-    # Dit is belangrijk voor je JavaScript-routering (hoewel minimaal in jouw app, goede gewoonte)
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-
-    # Optioneel: Schakel gzip compressie in voor snellere laadtijden
-    gzip on;
-    gzip_vary on;
-    gzip_proxied any;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml+rss text/javascript;
-    gzip_buffers 16 8k;
-    gzip_comp_level 5;
-}
+~éer‰íz{l¡ùàŠ|r‰ß
